fix(og-spinner): add vertical align for <svg>
prevents additional pixel at the bottom of the component. similar to <img>

--- a/src/components/og-spinner/og-spinner.scss
+++ b/src/components/og-spinner/og-spinner.scss
@@ -32,8 +32,9 @@
 }
 
 svg {
-    transform-origin: center;
     animation: spin 1.2s infinite linear;
+    transform-origin: center;
+    vertical-align: middle;
 }
 
 svg > circle {
